<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <FrameLayout
        android:id="@+id/mainContainerForFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/townTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/region"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/changeTownBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/changeTownBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/button_change_town"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/townTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/townTextView" />

            <Button
                android:id="@+id/goOptionsSelectActivityBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="288dp"
                android:layout_marginEnd="60dp"
                android:text="@string/button_options_select_title"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/skyImageView"
                android:layout_width="71dp"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/townTextView"
                app:srcCompat="@drawable/thunder_white" />

            <TextView
                android:id="@+id/pressureTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/skyImageView"
                app:layout_constraintTop_toTopOf="@+id/temperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atmo_pressure" />

            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:text="@string/temperature"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="@+id/skyImageView"
                app:layout_constraintEnd_toStartOf="@+id/skyImageView"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/skyImageView" />

            <TextView
                android:id="@+id/windTextView"
                app:layout_constraintBottom_toBottomOf="@+id/temperatureTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"
                app:layout_constraintStart_toEndOf="@+id/skyImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/skyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skyImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>